# tcards

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md
include/: cards.hpp  tests.hpp
src/: cards.cpp  main.cpp
src/include/: CMakeLists.txt  cards.cpp  tests.cpp
tests/: CMakeLists.txt  cards_card.cpp  cards_deck.cpp
